--- a/lib/odsaAV-min.css
+++ b/lib/odsaAV-min.css
@@ -1,3 +1,26 @@
+/* TRAKY MODIFICATIONS */
+
+h1.exerciseTitle {
+  margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 24px;
+    /* font-family: inherit; */
+    font-weight: 500;
+    line-height: 1.1;
+    /* color: inherit; */
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    text-align: left;
+    margin-left: 0;
+    margin-right: 0;
+    color: #333;
+}
+
+p.instructLabel {
+  margin-top: 0;
+}
+
+/* /TRAKY MODIFICATIONS/ */
+
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 
 /**
