--- a/lib/odsaAV-min.css
+++ b/lib/odsaAV-min.css
@@ -1,6 +1,14 @@
 /* TRAKY MODIFICATIONS */
 
-h1.exerciseTitle {
+.jsavcontainer {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+}
+
+.jsavcontainer h1.exerciseTitle {
   margin-top: 20px;
     margin-bottom: 10px;
     font-size: 24px;
@@ -15,11 +23,26 @@ h1.exerciseTitle {
     color: #333;
 }
 
-p.instructLabel {
+.jsavcontainer h1:first-child {
+    margin-top: 0;
+}
+
+.jsavcontainer p.instructLabel {
   margin-top: 0;
 }
 
-/* /TRAKY MODIFICATIONS/ */
+.jsavcontainer p.instructions {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+
+    color: #31708f;
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+}
+
+/* /TRAKY MODIFICATIONS END/ */
 
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 
