--- a/lib/odsaAV-min.css
+++ b/lib/odsaAV-min.css
@@ -28,12 +28,17 @@
 }
 
 .jsavcontainer p.instructLabel {
-  margin-top: 0;
+    margin-top: 0;
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 700;
 }
 
 .jsavcontainer p.instructions {
     padding: 15px;
     margin-bottom: 20px;
+    margin-top: 0;
     border: 1px solid transparent;
     border-radius: 4px;
 
