--- a/lib/odsaAV-min.css
+++ b/lib/odsaAV-min.css
@@ -47,6 +47,69 @@
     border-color: #bce8f1;
 }
 
+
+
+.jsavexercisecontrols {
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.jsavexercisecontrols input[type=button] {
+        /* buttons.less: .btn */
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    /*border-radius: 4px;*/
+        /* bootstrap.css: .btn-default */
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;
+}
+
+.jsavexercisecontrols input[type="button"]:first-of-type {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.jsavexercisecontrols input[type="button"]:last-of-type {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.jsavexercisecontrols input[type="button"]:hover {
+    color: #333;
+    background: #e6e6e6;
+    border-color: #adadad;
+}
+
+.jsavexercisecontrols input[type="button"]:focus {
+    color: #333;
+    background-color: #e6e6e6;
+    border-color: #8c8c8c;
+}
+
+.jsavexercisecontrols input[type="button"]:active {
+    color: #333;
+    background-color: #e6e6e6;
+    border-color: #adadad;
+}
+
 /* /TRAKY MODIFICATIONS END/ */
 
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
