Update jsav exercise instruction style

--- a/lib/odsaAV-min.css
+++ b/lib/odsaAV-min.css
@@ -54,6 +54,15 @@
 }
 
 
+.instructions::before {
+  content: 'Ohjeet: ';
+  font-weight: 700;
+}
+
+.instructLabel {
+  display: none !important;
+}
+
 
 .jsavexercisecontrols {
     display: table;
