Prim & Kruskal: enhanced edge coloring

--- a/AV/Development/KruskalPE.css
+++ b/AV/Development/KruskalPE.css
@@ -20,10 +20,11 @@
   background-color: #ddd;
 }
 .jsavgraph .jsavedge {
-  stroke-width: 8;
-  stroke: #7D8879;
+  stroke-width: 10;
+  stroke: #d59f0d;
 }
 .jsavgraph .jsavedge.marked {
+  stroke-width: 16;
   stroke: #F6B611;
 }
 .jsavgraph .jsavedge.discarded {
