--- a/AV/Development/PrimAVPE.css
+++ b/AV/Development/PrimAVPE.css
@@ -24,7 +24,7 @@
 }
 .jsavgraph .jsavedge.marked {
   stroke-width: 16;
-  stroke: #F6B611;
+  stroke: #ffe000;
 }
 .jsavgraph .jsavedgelabel {
   font-size: 16px;
