Fix the infamous edge clicking bug
Disable pointer events for .jsavedgelabel CSS property. The edge label no longer responds to any pointer related events, and clicks on it are on the edge below it.

This solution has been manually tested in Firefox 100 on Ubuntu 20.04.

In case that an edgelabel should be clickable in a specific exercise, add `pointer-events: auto;` in the `.jsavedgelabel` CSS property of the exercise's corresponding CSS file.

--- a/JSAV/css/JSAV.css
+++ b/JSAV/css/JSAV.css
@@ -586,6 +586,7 @@ a.jsavsettings:hover {
   position: absolute;
   display: inline-block;
   margin: 0;
+  pointer-events: none;
 }
 
 /******** LINKED LIST STRUCTURE ******/
