--- a/AV/Development/DijkstraPE-research.css
+++ b/AV/Development/DijkstraPE-research.css
@@ -1,7 +1,24 @@
 #container {
-  width: 800px;
-  height: 595px;
+  /* width: 800px; */
+  min-height: 595px;
 }
+
+.codeblock {
+  float: left;
+  margin: 1em;
+}
+
+.legend {
+  background-color: #FFFFFF; 
+  /* border: 1px solid; */
+  height: 115px;
+  margin-left: 40px;
+}
+
+.subheading {
+  margin-left: 40px;
+}
+
 .jsavline {
   height: 45px;
   margin: 0 0 0 20px;
@@ -20,7 +37,7 @@
 }
 .jsavgraph .jsavedge {
   stroke-width: 10;
-  stroke: #d59f0d;
+  stroke: #d1c39d;
 }
 .jsavgraph .jsavedge.marked {
   stroke-width: 16;
@@ -34,4 +51,14 @@
 .jsavautoresize .jsavnode {
   min-width: 45px;
   min-height: 45px;
+}
+
+.edge {
+  stroke-width: 10;
+  stroke: #d1c39d;
+}
+
+.edge.spanning {
+  stroke: #ffe000;
+  stroke-width: 16px;
 }
