Scaffolded Prim: focus dequeued node
Now the recently dequeued node is focused in similar way than in the
Scaffolded Dijkstra's algorithm exercise.

--- a/AV/Development/PrimAVPE-scaffolded.css
+++ b/AV/Development/PrimAVPE-scaffolded.css
@@ -90,6 +90,10 @@
   margin: 10px;
 }
 
+.focusnode {
+  border: 2px solid;
+}
+
 .avcontainer .jsavhorizontalarray > li:first-child {
   max-width: none !important;
   min-width: 70px !important;
