--- a/AV/Development/DijkstraPE-research-v2.css
+++ b/AV/Development/DijkstraPE-research-v2.css
@@ -50,6 +50,16 @@
   background-color: #4ebd44;
 }
 
+.jsavindex.updated {
+  background-color: #4ebd44;
+  font-weight: bold;
+}
+
+.jsavtree .jsavnode.updated {
+  background-color: #4ebd44;
+  font-weight: bold;
+}
+
 .jsavgraph .jsavedgelabel {
   font-size: 16px;
   background-color: transparent;
