--- a/AV/Development/PrimAVPE-scaffolded.css
+++ b/AV/Development/PrimAVPE-scaffolded.css
@@ -51,6 +51,17 @@
 .jsavtree .jsavnode.highlighted {
   background-color: #4ebd44;
 }
+
+.jsavindex.updated {
+  background-color: #4ebd44;
+  font-weight: bold;
+}
+
+.jsavtree .jsavnode.updated {
+  background-color: #4ebd44;
+  font-weight: bold;
+}
+
 .jsavgraph .jsavedgelabel {
   font-size: 16px;
   background-color: transparent;
