Scaffolded Dijkstra v3: color fringe nodes
Issue #179:
- color fringe nodes as fringe in the exercise view
- color fringe nodes as fringe in the model solution

--- a/AV/Development/DijkstraPE-research-v3.css
+++ b/AV/Development/DijkstraPE-research-v3.css
@@ -26,17 +26,20 @@
   stroke-width: 10;
   stroke: #d1c39d;
 }
-.jsavgraph .jsavedge.marked {
-  stroke-width: 16;
-  stroke: #ffe000;;
-}
 .jsavgraph .jsavedge.queued {
   stroke-width: 10;
   stroke: #d59f0d;
 }
+.jsavgraph .jsavedge.marked {
+  stroke-width: 16;
+  stroke: #ffe000;;
+}
 .jsavgraph .jsavedge.highlighted {
   stroke: #4ebd44;
   stroke-width: 16;
+}
+.jsavgraph .jsavnode.queued {
+  background-color: #d59f0d;
 }
 .jsavgraph .jsavnode.highlighted {
   background-color: #4ebd44;
