--- a/AV/Development/DijkstraPE-research-v3.css
+++ b/AV/Development/DijkstraPE-research-v3.css
@@ -19,15 +19,15 @@
   z-index: 0;
 }
 
-.jsavgraph .jsavedge {
+.jsavgraph .jsavedge, .legend .edge {
   stroke-width: 10;
   stroke: #d1c39d;
 }
-.jsavgraph .jsavedge.queued {
+.jsavgraph .jsavedge.queued, .legend .edge.queued {
   stroke-width: 10;
   stroke: #d59f0d;
 }
-.jsavgraph .jsavedge.marked {
+.jsavgraph .jsavedge.marked, .legend .edge.spanning {
   stroke-width: 16;
   stroke: #ffe000;;
 }
@@ -38,7 +38,7 @@
 .jsavgraph .jsavnode {
   background-color: #d1c39d;
 }
-.jsavgraph .jsavnode.queued {
+.jsavgraph .jsavnode.queued, .legend .edge.spa {
   background-color: #d59f0d;
 }
 .jsavgraph .jsavnode.marked {
@@ -119,20 +119,6 @@
   width: 250px;
   border: 1px solid;
   background-color: #ffffff;
-}
-
-.edge {
-  stroke-width: 10;
-  stroke: #d1c39d;
-}
-
-.edge.spanning {
-  stroke: #ffe000;
-  stroke-width: 16px;
-}
-
-.edge.queued {
-  stroke: #d59f0d;
 }
 
 .flex {
