Scaffolded Dijkstra: legend in model answer
Issue #197. Add legend to the model answer.

--- a/AV/Development/DijkstraPE-research-v3.css
+++ b/AV/Development/DijkstraPE-research-v3.css
@@ -126,6 +126,12 @@ span.compare {
   background-color: #ffffff;
 }
 
+.jsavmodelanswer .legend {
+  position: absolute;
+  left: 650px;
+  z-index: 5;
+}
+
 .flex {
   display: flex;
   flex-wrap: nowrap;
