Scaff.Dijkstra: small UI tweaks
Exercise view: Priority queue shifts down a little when the model
answer button is clicked. Unfortunately, the label stays where it is.
However, now the PQ box itsels is implemented with CSS border instead of
jsav (Raphaël) graphics.

--- a/AV/Development/DijkstraPE-research-v3.css
+++ b/AV/Development/DijkstraPE-research-v3.css
@@ -133,6 +133,7 @@ span.compare {
 
 .jsavbinarytree {
   background-color: white;
+  border: 1px solid black;
 }
 #dequeueButton {
   z-index: 110;
