JSAV: Scaffolded Dijkstra updated to 5157c9d0
https://github.com/Aalto-LeTech/jsav-exercise-recorder/commit/5157c9d08ad24907d337cd7669f67afcbe99e59a

In short:
+ code refactoring
+ exercise instance generator on its own file (uglified)
+ distance table coloring

--- a/AV/Development/DijkstraPE-research-v3.css
+++ b/AV/Development/DijkstraPE-research-v3.css
@@ -41,13 +41,13 @@
   stroke: #4ebd44;
   stroke-width: 16;
 }
-.jsavgraph .jsavnode {
+.jsavgraph .jsavnode, .jsavmatrix .jsavnode {
   background-color: #d1c39d;
 }
-.jsavgraph .jsavnode.fringe {
+.jsavgraph .jsavnode.fringe, .jsavmatrix .jsavnode.fringe {
   background-color: #d59f0d;
 }
-.jsavgraph .jsavnode.spanning {
+.jsavgraph .jsavnode.spanning, .jsavmatrix .jsavnode.spanning {
   background-color: #FFF050;
 }
 .jsavgraph .jsavnode.focusnode {
@@ -56,7 +56,7 @@
 
 /* Comparison operation in the model answer, used for
  * .jsavnode, .jsavindex, and span.compare in the narration text. */
-.compare, .jsavgraph .jsavnode.compare {
+.compare, .jsavgraph .jsavnode.compare, .jsavmatrix .jsavnode.compare {
   background-color: #4ebd44;
 }
 span.compare {
