--- a/AV/Development/KruskalPE.css
+++ b/AV/Development/KruskalPE.css
@@ -2,35 +2,15 @@
   width: 800px;
   height: 595px;
 }
-#procontrols {
-  text-align: center;
-}
 
-.jsavgraph svg {
-  z-index: 0;
-}
-.jsavnode.marked {
-  background-color: #FFF050;
-}
 .jsavnode.discarded {
   background-color: #ddd;
 }
-.jsavgraph .jsavedge {
-  stroke-width: 10;
-  stroke: #d1c39d;
-}
-.jsavgraph .jsavedge.marked {
-  stroke-width: 16;
-  stroke: #ffe000;
-}
 .jsavgraph .jsavedge.discarded {
-  stroke: rgba(125, 136, 121, 0.2);
+  stroke: #d4d4d4;
+  stroke-dasharray: 5;
 }
-.jsavgraph .jsavedgelabel {
-  font-size: 16px;
-  background-color: transparent;
-  text-shadow: 0 0 5px #fff;
-}
+
 .jsavautoresize .jsavnode {
   min-width: 45px;
   min-height: 45px;
@@ -44,8 +24,4 @@
 .jsavmatrix .jsavarray li.jsavnode:first-child {
   min-width: 50px;
   height: 35px;
-}
-
-.jsavmatrix .jsavarray .marked {
-  background-color: #ffe000;
 }
