Scaff.Dijkstra: new coloring, common CSS file
Issue #215
Create a common CSS file for all graph algorithm exercises.
Move definitions from exercise CSS file to the common CSS file
- Scaffolded Dijkstra

--- a/AV/Development/GraphAlgorithms.css
+++ b/AV/Development/GraphAlgorithms.css
@@ -161,7 +161,8 @@ margin: 10px;
 #dequeueButton {
     float: right;
     position: relative;
-    margin: 15px;
+    margin: 15px;    
+    z-index: 110;
 }
 
 .jsavbinarytree {
