--- a/AV/Development/DijkstraPE-research.css
+++ b/AV/Development/DijkstraPE-research.css
@@ -1,5 +1,5 @@
 #container {
-  /* width: 800px; */
+  width: 1400px;
   min-height: 595px;
 }
 
@@ -19,46 +19,6 @@
   margin-left: 40px;
 }
 
-.jsavline {
-  height: 45px;
-  margin: 0 0 0 20px;
-}
-
-#procontrols {
-  text-align: center;
-}
-
-.jsavgraph svg {
-  z-index: 0;
-}
-
-.jsavnode.marked {
-  background-color: #FFF050;
-}
-.jsavgraph .jsavedge {
-  stroke-width: 10;
-  stroke: #d1c39d;
-}
-.jsavgraph .jsavedge.marked {
-  stroke-width: 16;
-  stroke: #ffe000;;
-}
-.jsavgraph .jsavedgelabel {
-  font-size: 16px;
-  background-color: transparent;
-  text-shadow: 0 0 5px #fff;
-}
-.jsavautoresize .jsavnode {
-  min-width: 45px;
-  min-height: 45px;
-}
-
-.edge {
-  stroke-width: 10;
-  stroke: #d1c39d;
-}
-
-.edge.spanning {
-  stroke: #ffe000;
-  stroke-width: 16px;
+.jsavgraph {
+  margin-top: 10px;
 }
