Corrected sizes of exercise containers
Fixed a bug introduced in issue #215.

--- a/AV/Development/PrimAVPE.css
+++ b/AV/Development/PrimAVPE.css
@@ -1,6 +1,11 @@
 #container {
-  width: 1200px;
-  min-height: 595px;
+  width: 1100px;
+  min-height: 700px;
+}
+
+.jsavgraph {
+  min-width: 500px;
+  min-height: 500px;
 }
 
 .legend {
