All graph JSAVs: unified color scheme
All graph algorithm JSAVs are updated to match
https://github.com/Aalto-LeTech/jsav-exercise-recorder/commit/d6dd00a694b0f7a4829b9bbbac2b3c431f63bd9b

User interfaces:
- Unified color scheme for all exercises
- Scaffolded Dijkstra: model answer steps improved

Code:
- Unified CSS file for all exercises
- Unified legend creation code (Prim & Dijkstra)

https://github.com/Aalto-LeTech/jsav-exercise-recorder/issues/207
https://github.com/Aalto-LeTech/jsav-exercise-recorder/issues/215
https://github.com/Aalto-LeTech/jsav-exercise-recorder/issues/216
https://github.com/Aalto-LeTech/jsav-exercise-recorder/issues/217

--- a/AV/Development/PrimAVPE.css
+++ b/AV/Development/PrimAVPE.css
@@ -1,37 +1,20 @@
 #container {
-  width: 800px;
-  height: 595px;
-}
-.jsavline {
-  height: 45px;
-  margin: 0 0 0 20px;
+  width: 1100px;
+  min-height: 700px;
 }
 
-#procontrols {
-  text-align: center;
+.jsavgraph {
+  min-width: 500px;
+  min-height: 500px;
 }
 
-.jsavgraph svg {
-  z-index: 0;
+.legend {
+  background-color: #FFFFFF; 
+  /* border: 1px solid; */
+  height: 115px;
+  margin-left: 40px;
 }
 
-.jsavnode.marked {
-  background-color: #FFF050;
-}
-.jsavgraph .jsavedge {
-  stroke-width: 10;
-  stroke: #d59f0d;
-}
-.jsavgraph .jsavedge.marked {
-  stroke-width: 16;
-  stroke: #ffe000;
-}
-.jsavgraph .jsavedgelabel {
-  font-size: 16px;
-  background-color: transparent;
-  text-shadow: 0 0 5px #fff;
-}
-.jsavautoresize .jsavnode {
-  min-width: 45px;
-  min-height: 45px;
+.subheading {
+  margin-left: 40px;
 }
