--- a/AV/Development/graphDFSPE.css
+++ b/AV/Development/graphDFSPE.css
@@ -1,27 +1,8 @@
 #container {
-  /* width: 800px; */
-  min-height: 595px;
+    width: 900px;
+    height: 600px;
 }
-.jsavline {
-  height: 45px;
-  margin: 0 0 0 20px;
-}
-
-#procontrols {
-  text-align: center;
-}
-
-.jsavgraph svg {
-  z-index: 0;
-}
-
-.jsavnode.marked {
-  background-color: #ffe100;
-}
-.jsavedge {
-  stroke-width: 8;
-  stroke: #d1c39d;
-}
-.jsavedge.marked {
-  stroke: #ffe100;
+.jsavgraph {
+    min-width: 500px;
+    min-height: 500px;
 }
