Improvements to nonscaffolded Prim and Dijkstra (#283)
* Format Dijkstra exercise according to eslint config

* Move helper function from PQ-Dijkstra file to graphUtils

This enables using the same function in non-PQ Dijkstra.

* Update the instructions of no-PQ Dijkstra

Instructions are now more consistent with other graph algorithm exercises.

* Remove unnecessary script tags from no-PQ Prim and Dijkstra

* Format Prim exercise according to eslint config

* Adjust Dijkstra-PQ legend location

* Allow setting a minimum edge weight when generating a graph

* Select edge weights from interval [10, 90) in no-PQ Prim

* Add function for checking uniqueness of edge weights to graphUtils.js

* Add docstring

* Require unique edge weights in no-PQ Prim

* Update the instructions of no-PQ Prim

Instructions are now more consistent with other graph exercises
and do not mention the alphabetic order at all.

* Remove some old commented out code

* Add visited flag to no-PQ Prim pseudo code

* Change the pseudo code highlight color to yellow in Prim and Dijkstra

Also removed the margin from the pseudo code lines to make pseudo code
block smooth as in BFS and DFS (in those exercises css file
odsaStyle-min.css is not loaded). Removed margin also affects the
appearance of adjacency lists. The changed css affects all exercises
that load the odsaStyle-min.css file.

* Revert "Move helper function from PQ-Dijkstra file to graphUtils"

This reverts commit 90d0df8661e6d203d51088deac22085fd28aeef6.

* Change "v" to "vertex" in no-PQ Prim pseudo code

This hopefully reduces confusion with the other "v" that is used later
in the pseudo code.

* Adjust no-PQ Prim graph location

The pseudo code became a little wider so this avoids overlap.

* Define the clicked edge as (u, previous[u]) in Prim instructions

This aims to make the instructions more compatible with the pseudo code.

* Add Teemu to no-PQ Prim and Dijkstra authors


--- a/lib/odsaStyle-min.css
+++ b/lib/odsaStyle-min.css
@@ -120,7 +120,6 @@
 }
 
 .jsavcodeline {
-  margin-bottom: 1px;
   font-size: 14px;
   line-height: 16px;
 }
@@ -143,7 +142,7 @@
 }
 
 .jsavcodeline.jsavhighlight {
-  background-color: #ccc !important;
+  background-color: yellow !important;
 }
 
 .jsavcodeline:hover {
