JSAV: Update no-PQ Prim
Integrates newest version from jsav-exercise-recorder repo

Original pull request
https://github.com/Aalto-LeTech/jsav-exercise-recorder/pull/283

--- a/lib/odsaStyle-min.css
+++ b/lib/odsaStyle-min.css
@@ -143,7 +143,7 @@
 }
 
 .jsavcodeline.jsavhighlight {
-  background-color: #ccc !important;
+  background-color: yellow !important;
 }
 
 .jsavcodeline:hover {
